--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "url": "https://github.com/broofa/sectionify.git"
   },
   "bin": "./sectionify",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "dependencies": {
+    "minimist": "^1.1.0"
+  }
 }
