--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "type": "git",
     "url": "https://github.com/broofa/sectionify.git"
   },
+  "main": "./index.js",
   "bin": "./sectionify",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "scripts": {
+    "test": "nodeunit test.js"
+  },
   "dependencies": {
     "minimist": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodeunit": "^0.9.0"
   }
 }
